src/test/deca/codegen/valid/created/testInstanceOf/InstanceofObject.deca
// Description :
//   instance of sur meme class
//
// Résultats :
//    ok

class A { }

{
    A a = new A();
    if (a instanceof Object) {
        println("ok");
    }
}